# rkhs-kernel-methods

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: kernel_trick.md  mercer_theorem.md  references.md  rkhs.md  svm_theory.md
notebooks/: 01_linear_svm.ipynb  02_kernel_trick.ipynb  03_rkhs_intuition.ipynb  04_kernel_comparison.ipynb
reports/: final_summary.md
results/: kernel_comparison.md
scripts/: 01_linear_svm.py  02_linear_failure.py  03_kernel_trick.py  04_kernel_comparison.py  05_rkhs_visualizations.py  05b_generate_summary_figures.py  06_generate_all_figures.py
src/: main.py
src/rkhs_kernel_methods/: __init__.py  datasets.py  evaluation.py  kernels.py  models.py  rkhs.py  theory.py  utils.py  visualization.py
tests/: test_datasets.py  test_kernels.py  test_models.py  test_rkhs.py
